--- a/css/style.css
+++ b/css/style.css
@@ -321,16 +321,8 @@ html {
     }
     .weDo__actions{
         position: static;
-        flex-direction: column;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
         margin: 0;
         width: 100%;
-    }
-    .weDo__actions .weDo__actions-action{
-        width: 100%;
-        padding: 10%;
     }
     .weSimilar{
         width: 100%;
@@ -351,6 +343,19 @@ html {
     .form .form__form .form__label-digit{
         display: none;
     }
+    .weDo__actions .weDo__actions-action{
+        width: 100%;
+        padding: 10%;
+    }
+}
+@media all and (max-width: 830px){
+    .weDo__actions{
+          flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;      
+    }
+    
 }
 @media all and (max-width: 550px){
     .header .header__caption,.advantages .advantages__caption{
@@ -363,5 +368,22 @@ html {
     .form .form__caption{
         padding: 0 10%;
         font-size: 30px;
+    }
+}
+/* Также Internet Explorer 10+ */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .header .header__profile-href .header__profile-href-button-text{
+        line-height: 54px;
+    }
+    .header .header__profile-href .header__profile-href-circle{
+        z-index: -1;
+    }
+}
+@media all and (min-width: 2500px){
+    .weDo{
+        background-size: 100% 100%;
+    }
+    .advantages .advantages__list{
+        justify-content: space-around;
     }
 }
